# chbmp-ds005385-1.0.2-mpilmbb-Data-Reading---Metadata-Table

./: .gitignore  EDF Data Reading - Metadata table.py  FIF Data Reading - Metadata table.py  README.md  pyproject.toml
03_analysis/: SET - FDT Data Reading - Metadata Table.py  main.py
03_analysis/00_File Type Based Data Reading/: EDF Data Reading - Metadata table.py  FIF Data Reading - Metadata table.py  SET - FDT Data Reading - Metadata Table.py
03_analysis/00_Project Based Data Reading/: chbmp Data Reading - Metadata table.py  ds005385 Data Reading - Metadata table.py  mpilmbb Data Reading - Metadata table.py
03_analysis/00_Project Based Data Reading/Dortmund 'Status' Channel Test/: Dortmund_Status_Export.txt  Dortmund_Status_Test.py
03_analysis/01_MasterTable/: Master Data Reading - Metadata Table.py
03_analysis/02_preprocessing/: 00_unify_eeg_format.py
03_analysis/Master Table/: Master Data Reading - Metadata Table.py
03_analysis/Metadata Reading & Plot Exporting/: Master Data Reading & Plot Exporting.py
03_analysis/Metadata Table Scripts/: ds005385 Data Reading - Metadata table.py  mpilmbb Data Reading - Metadata table.py
Metadata Reading & Plot Exporting/: Master Data Reading & Plot Exporting.py
Metadata Table Scripts/: chbmp Data Reading - Metadata table.py
chbmp_ds005385_1_0_2_mpilmbb_data_reading_metadata_table.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/: config.py
src/chbmp_ds005385_1_0_2_mpilmbb_data_reading_metadata_table.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
