[project]
name = "chbmp-ds005385-1-0-2-mpilmbb-data-reading-metadata-table"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "mne>=1.8.0",
    "numpy>=2.0.2",
]

[tool.setuptools]
packages = ["src"]

[tool.setuptools.package-dir]
"" = "."