[project]
name = "chbmp-ds005385-1-0-2-mpilmbb-data-reading-metadata-table"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "ipykernel>=6.31.0",
    "mne>=1.8.0",
    "numpy>=2.0.2",
    "pandas>=2.3.3",
    "openpyxl>=3.1.5",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"